pmd check - fix (#387)